--- a/views/editPytanie.html
+++ b/views/editPytanie.html
@@ -2,7 +2,7 @@
 <html lang="pl">
     <head>
             <link rel="Shortcut icon" href="/img/ico/testy-logiczne.ico" />
-        <title>Widok Testu</title>
+        <title>Edycja pytania</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/style.css">
         <meta http-equiv="Content-Type", content="text/html; charset=utf-8">
