--- a/public/css/style.css
+++ b/public/css/style.css
@@ -180,12 +180,24 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-bottom: 10px;
 }
+.inputedit:focus
+{
+    box-shadow: 0px 0px 1vw   #65afe0;
+    border: #7DB1D3;
+    background-color: #7db0d365;
+}
 .textareaEdit{
     width: 100%;
     height: 300px;
     font-size: 30px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-bottom: 00px;
+}
+.textareaEdit:focus
+{
+    box-shadow: 0px 0px 1vw   #65afe0;
+    border: #7DB1D3;
+    background-color: #7db0d365;
 }
 .content>table{
     font-size: 20px;
@@ -237,7 +249,7 @@ body{
     height: 100px;
     margin: auto;/*
     transform: translateY(500px);*/
-    margin-top: 500px;
+    margin-top: 55vh;
   }
   .lds-ring div {
     box-sizing: border-box;
@@ -293,4 +305,13 @@ width: 280px !important;
 float: left !important;
 margin-right: 10%;
   }
-  
+  .select{
+      box-shadow: 0px 0px 1vw #06a701;
+      border-color: #06a701;
+      background: #07a7013a;
+  }
+  .editTable{
+    box-shadow: 0px 0px 1vw #e0c134;
+    border-color: #e0c134;
+    background: #e0c03459;
+  }
