dalsza praca nad edycja pytań
naparawa pewnych błędów

--- a/views/editPytanie.html
+++ b/views/editPytanie.html
@@ -23,8 +23,8 @@
             <textarea class="inputedit " id="p2" placeholder="Odpowiedz 2"></textarea>
             <textarea class="inputedit" id="p3" placeholder="Odpowiedz 3"></textarea>
             <textarea class="inputedit" id="p4" placeholder="Odpowiedz 4"></textarea>  
-            <button class="button_to_do">Zapisz</button>
-            <button class="button_to_do">Anuluj</button>
+            <button class="button_to_do" id="save">Zapisz</button>
+            <button class="button_to_do" id="cancle">Anuluj</button>
             <button class="button_to_do">Usuń</button>
             <div style="clear:both"></div>
         </div>
