--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,14 +169,16 @@ body{
 }
 .content>input{
     width: 100%;
-    font-size: 30px;
+    font-size: 3vw !important;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-bottom: 40px;
 }
 .inputedit
 {
     width: 100%;
-    font-size: 30px;
+    min-width: 100%;
+    max-width: 100%;
+    font-size: 1.5vw;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-bottom: 10px;
 }
@@ -187,9 +189,11 @@ body{
     background-color: #7db0d365;
 }
 .textareaEdit{
+    max-width: 100%;
     width: 100%;
+    min-width: 100%;
     height: 300px;
-    font-size: 30px;
+    font-size: 1.5vw;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-bottom: 00px;
 }
