--- a/views/tworzenieT.html
+++ b/views/tworzenieT.html
@@ -1,4 +1,4 @@
-<!--Copyright 2018 BŚ-->
+<!--@Copyright 2018 BŚ-->
 <html lang="pl">
     <head>
         <link rel="Shortcut icon" href="/img/ico/testy-logiczne.ico" />
@@ -27,7 +27,7 @@
                 <hr>
                 <div class="content">
                     <input type="text" id="nazwaT"   maxlength="40" placeholder="Nazwa testu">
-                    <input type="text" id="iloscT"  maxlength="2" placeholder="Iloć pytań">
+                    <!--<input type="text" id="iloscT"  maxlength="2" placeholder="Iloć pytań">-->
                     <input type="text" id="klasaT"   placeholder="Klasa 1-4">
                     <input type="button" id="utworz" placeholder="" value="Utwórz">
                     <hr>
