--- a/views/testy.html
+++ b/views/testy.html
@@ -1,4 +1,4 @@
-<!--Copyright 2018 BŚ-->
+<!--@Copyright 2018 BŚ-->
 <html lang="pl">
     <head>
         <link rel="Shortcut icon" href="/img/ico/testy-logiczne.ico" />
