--- a/views/widokTestu.html
+++ b/views/widokTestu.html
@@ -1,4 +1,4 @@
-<!--Copyright 2018 BŚ-->
+<!--@Copyright 2018 BŚ-->
 <html lang="pl">
     <head>
             <link rel="Shortcut icon" href="/img/ico/testy-logiczne.ico" />
@@ -18,22 +18,35 @@
                 <span class="heder" >Data utworzenia: <span id="dataU"></span>&nbsp;&nbsp;</span>
                 <span class="heder" >Klasa: <span id="klasU"></span></span>
                 <hr>
-                <button class="button_to_do">Edytuj</button>
+                <!--<button class="button_to_do">Edytuj</button>-->
+                <form action="/testy/tworzenie/pytanie" method="GET" style="display:inline;">
+                <button class="button_to_do">Dodaj pytanie</button>
+                <input type="text" value="" class="idinput" name="id">
+                </form>
+                <button class="button_to_do">Znajdz pytanie</button>
                 <button class="button_to_do">Rozpocznij test</button>
                 <button class="button_to_do">Wyniki testu</button>
                 <div style="clear:both"></div>
                 <hr>
             </div>
             <div id="contener">
-                
+                    
             
         </div>
-        
+        <div class="error_bodyy disable">
+                <img src="/img/error21.png"  height="500px;" width="500px;">
+                <br>Brak pytań!!!
+            </div>
         <div style="text-align:center;margin-top:20px;margin-bottom:20px;">&copy; Copyright 2018 BŚ</div>
         </div>
         <div class="background " ><div class="lds-ring"><div></div><div></div><div></div><div></div></div>
         <div  class="backgroundTekst">Wczytywanie danych</div>
     </div>
+    <div class="error_body disable">
+        <img src="/img/error21.png"  height="500px;" width="500px;">
+        <br>Nie znaleziono testu!
+    </div>
+    
     
     </body>
 </html>
