--- a/views/tworzenieT.html
+++ b/views/tworzenieT.html
@@ -15,7 +15,6 @@
                 <a id="to_check" class="button_to_do" href="/ustawienia" >Ustawienia</a>
                 <a id="to_check" class="button_to_do" href="/testy">Testy</a>
                 <a id="to_check" class="button_to_do" href="/testy/tworzenie/test">Stwórz test</a>
-                <a id="to_check" class="button_to_do" href="/testy/tworzenie/pytanie">Dodaj Pytanie</a>
                 <a id="to_check" class="button_to_do" href="/testy/aktualny">Aktuany test</a>
                 <a id="to_check" class="button_to_do" href='/test/rozpoczynanie'>Rozpocznij test</a>
                 <a id="to_check" class="button_to_do" href="/test/wyniki/archiwum">Archiwum testów</a>
@@ -31,7 +30,7 @@
                     <input type="text" id="klasaT"   placeholder="Klasa 1-4">
                     <input type="button" id="utworz" placeholder="" value="Utwórz">
                     <hr>
-                    <div style="font-size:40px; text-align:center;">Stworzone Testy</div>
+                    <div style="font-size:40px; text-align:center;">Utworzone testy</div>
                     <table style="width:100%; background-color: #C3D1A3;" border="solid" padding="5px;">
                         
                         <thead>
