--- a/views/addPytanie.html
+++ b/views/addPytanie.html
@@ -2,11 +2,11 @@
 <html lang="pl">
     <head>
             <link rel="Shortcut icon" href="/img/ico/testy-logiczne.ico" />
-        <title>Edycja pytania</title>
+        <title>Tworzenie pytania</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/style.css">
         <meta http-equiv="Content-Type", content="text/html; charset=utf-8">
-        <script src="/js/pytanieClass.js"></script>
+        <script type='text/javascript' src="/js/pytanieClass.js"></script>
         <script type='text/javascript' src="/js/jquery-2.0.3.min.js"></script>
         <script type="text/javascript" src="/js/cpytanie.js"></script>
     </head>
