--- a/views/admin.html
+++ b/views/admin.html
@@ -2,7 +2,7 @@
 <html lang="pl">
     <head>
         <link rel="Shortcut icon" href="/img/ico/testy-logiczne.ico" />
-        <title>Error</title>
+        <title>Panel administratora</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/css/style.css">
         <meta http-equiv="Content-Type", content="text/html; charset=utf-8">
@@ -15,7 +15,6 @@
                     <a id="to_check" class="button_to_do" href="/ustawienia" >Ustawienia</a>
                     <a id="to_check" class="button_to_do" href="/testy">Testy</a>
                     <a id="to_check" class="button_to_do" href="/testy/tworzenie/test">Stwórz test</a>
-                    <a id="to_check" class="button_to_do" href="/testy/tworzenie/pytanie">Dodaj Pytanie</a>
                     <a id="to_check" class="button_to_do" href="/testy/aktualny">Aktuany test</a>
                     <a id="to_check" class="button_to_do" href='/test/rozpoczynanie'>Rozpocznij test</a>
                     <a id="to_check" class="button_to_do" href="/test/wyniki/archiwum">Archiwum testów</a>
