--- a/views/addPytanie.html
+++ b/views/addPytanie.html
@@ -15,6 +15,7 @@
         <div class="body" >
                 <div class="titleC">Dodawanie pytania</div>
                 <hr>
+                <button class="button_to_do" style="margin-bottom:20px;" id="cancle1">Wstecz</button>
             <div id="contener ">
                     <button class="button_to_do" id="fast">Szybkie wprowadzanie danych</button>
             <textarea class="textareaEdit" id="pytanie" placeholder="Pytanie testu"></textarea>
@@ -25,7 +26,7 @@
             <textarea class="inputedit" id="p4" placeholder="Odpowiedz 4"></textarea>  
             <button class="button_to_do" id="save">Zapisz</button>
             <button class="button_to_do" id="cancle">Anuluj</button>
-            <button class="button_to_do" id="dell">Usuń</button>
+            
             <div style="clear:both"></div>
             
         </div>
