--- a/views/widokTestu.html
+++ b/views/widokTestu.html
@@ -18,7 +18,7 @@
                 <span class="heder" >Data utworzenia: <span id="dataU"></span>&nbsp;&nbsp;</span>
                 <span class="heder" >Klasa: <span id="klasU"></span></span>
                 <hr>
-                <!--<button class="button_to_do">Edytuj</button>-->
+                <button class="button_to_do" id="back">Cofnij</button>
                 <form action="/testy/tworzenie/pytanie" method="GET" style="display:inline;">
                 <button class="button_to_do">Dodaj pytanie</button>
                 <input type="text" value="" class="idinput" name="id">
@@ -26,6 +26,7 @@
                 <button class="button_to_do">Znajdz pytanie</button>
                 <button class="button_to_do">Rozpocznij test</button>
                 <button class="button_to_do">Wyniki testu</button>
+                <button class="button_to_do"  id="addnewT">Dodaj nowy test</button>
                 <div style="clear:both"></div>
                 <hr>
             </div>
