--- a/views/editPytanie.html
+++ b/views/editPytanie.html
@@ -14,9 +14,54 @@
     <body>
         
         <div class="body disable" >
-                <div class="titleC">Edycja pytania</div>
-                <hr>
-            <div id="contener ">
+                <div class="nav">
+                        <ol>
+                            <li><a href="/admin">Strona główna</a></li>
+                            <li><a href="#">Profil</a>
+                                <ul>
+                                    <li><a href="#">Profil</a></li>
+                                    <li><a href="#">Ustawienia</a></li>
+                                    <li><a href="#">Zmiana hasła</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Testy</a>
+                                <ul>
+                                    <li><a href="/testy">Wszystkie testy</a></li>
+                                    <li><a href="/testy/tworzenie/test">Dodaj test</a></li>
+                                    <li><a href="#">Rozpocznij test</a></li>
+                                    <li><a href="#">Aktualne testy</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Klasy</a>
+                                <ul>
+                                    <li><a href="#">Wszystkie klasy</a></li>
+                                    <li><a href="#">Dodaj klase</a></li>
+                                    <li><a href="#">Archiwizuj klase</a></li>
+                                    <li><a href="#">Wyniki Klas</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Archiwum</a>
+                                <ul>
+                                    <li><a href="#">Testy</a></li>
+                                    <li><a href="#">Klasy</a></li>
+                                    <li><a href="#">Uczniowie</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Ustawienia</a>
+                                <ul>
+                                    <li><a href="#">Platformy</a></li>
+                                    <li><a href="#">Testów</a></li>
+                                    <li><a href="#">Administratorzy</a></li>
+                                    <li><a href="#">Strona ucznia</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Wyloguj</a></li>
+                        </ol>
+                    
+                    </div>
+                <div class="titleC" style="width:90%; margin:auto;">Edycja pytania <hr></div>
+                
+            <div id="contener " style="width:90%; margin:auto;">
             <textarea class="textareaEdit" id="pytanie" placeholder="Pytanie testu"></textarea>
             <button class="button_to_do" id="zmiana"style="margin-top:1vw;margin-bottom:1vw;">Zmień poprawną odpowiedz</button>
             <textarea class="inputedit " id="p1" placeholder="Odpowiedz 1"></textarea>
@@ -40,4 +85,27 @@
     </div>
     
     </body>
+    <script>
+
+            $(document).ready(function() {
+            var NavY = $('.nav').offset().top;
+             
+            var stickyNav = function(){
+            var ScrollY = $(window).scrollTop();
+                  
+            if (ScrollY > NavY) { 
+                $('.nav').addClass('sticky');
+            } else {
+                $('.nav').removeClass('sticky'); 
+            }
+            };
+             
+            stickyNav();
+             
+            $(window).scroll(function() {
+                stickyNav();
+            });
+            });
+            
+        </script>
 </html>
