--- a/views/tworzenieT.html
+++ b/views/tworzenieT.html
@@ -11,16 +11,51 @@
     </head>
     <body>
         <div class="body disable">
-            <div class="menu">
-                <a id="to_check" class="button_to_do" href="/ustawienia" >Ustawienia</a>
-                <a id="to_check" class="button_to_do" href="/testy">Testy</a>
-                <a id="to_check" class="button_to_do" href="/testy/tworzenie/test">Stwórz test</a>
-                <a id="to_check" class="button_to_do" href="/testy/aktualny">Aktuany test</a>
-                <a id="to_check" class="button_to_do" href='/test/rozpoczynanie'>Rozpocznij test</a>
-                <a id="to_check" class="button_to_do" href="/test/wyniki/archiwum">Archiwum testów</a>
-                <a id="to_check" class="button_to_do" >Wyloguj</a>
-                <div style="clear:both"></div>
-            </div>
+                <div class="nav">
+                        <ol>
+                            <li><a href="/admin">Strona główna</a></li>
+                            <li><a href="#">Profil</a>
+                                <ul>
+                                    <li><a href="#">Profil</a></li>
+                                    <li><a href="#">Ustawienia</a></li>
+                                    <li><a href="#">Zmiana hasła</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Testy</a>
+                                <ul>
+                                    <li><a href="/testy">Wszystkie testy</a></li>
+                                    <li><a href="/testy/tworzenie/test">Dodaj test</a></li>
+                                    <li><a href="#">Rozpocznij test</a></li>
+                                    <li><a href="#">Aktualne testy</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Klasy</a>
+                                <ul>
+                                    <li><a href="#">Wszystkie klasy</a></li>
+                                    <li><a href="#">Dodaj klase</a></li>
+                                    <li><a href="#">Archiwizuj klase</a></li>
+                                    <li><a href="#">Wyniki Klas</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Archiwum</a>
+                                <ul>
+                                    <li><a href="#">Testy</a></li>
+                                    <li><a href="#">Klasy</a></li>
+                                    <li><a href="#">Uczniowie</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Ustawienia</a>
+                                <ul>
+                                    <li><a href="#">Platformy</a></li>
+                                    <li><a href="#">Testów</a></li>
+                                    <li><a href="#">Administratorzy</a></li>
+                                    <li><a href="#">Strona ucznia</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Wyloguj</a></li>
+                        </ol>
+                    
+                    </div>
             <div class="cTest">
                 <div class="titleC">Tworzenie testu</div>
                 <hr>
@@ -55,4 +90,27 @@
         <div  class="backgroundTekst">Wczytywanie danych</div>
     </div>   
 </body>
+<script>
+
+        $(document).ready(function() {
+        var NavY = $('.nav').offset().top;
+         
+        var stickyNav = function(){
+        var ScrollY = $(window).scrollTop();
+              
+        if (ScrollY > NavY) { 
+            $('.nav').addClass('sticky');
+        } else {
+            $('.nav').removeClass('sticky'); 
+        }
+        };
+         
+        stickyNav();
+         
+        $(window).scroll(function() {
+            stickyNav();
+        });
+        });
+        
+    </script>
 </html>
