--- a/views/widokTestu.html
+++ b/views/widokTestu.html
@@ -13,12 +13,56 @@
     <body>
         
         <div class="body disable" >
-            <div style="width:100%;text-align:center;">
+                <div class="nav">
+                        <ol>
+                            <li><a href="/admin">Strona główna</a></li>
+                            <li><a href="#">Profil</a>
+                                <ul>
+                                    <li><a href="#">Ustawienia</a></li>
+                                    <li><a href="#">Zmiana hasła</a></li>
+                                </ul>
+                            </li>
+                            <li><a>Testy</a>
+                                <ul>
+                                    <li><a href="/testy">Wszystkie testy</a></li>
+                                    <li><a href="/testy/tworzenie/test">Dodaj test</a></li>
+                                    <li><a href="#">Rozpocznij test</a></li>
+                                    <li><a href="#">Aktualne testy</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Klasy</a>
+                                <ul>
+                                    <li><a href="#">Wszystkie klasy</a></li>
+                                    <li><a href="#">Dodaj klase</a></li>
+                                    <li><a href="#">Archiwizuj klase</a></li>
+                                    <li><a href="#">Wyniki Klas</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Archiwum</a>
+                                <ul>
+                                    <li><a href="#">Testy</a></li>
+                                    <li><a href="#">Klasy</a></li>
+                                    <li><a href="#">Uczniowie</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Ustawienia</a>
+                                <ul>
+                                    <li><a href="#">Platformy</a></li>
+                                    <li><a href="#">Testów</a></li>
+                                    <li><a href="#">Administratorzy</a></li>
+                                    <li><a href="#">Strona ucznia</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Wyloguj</a></li>
+                        </ol>
+                    
+                    </div>
+            <div style="width:100%;text-align:center; z-index: 0;">
                 <span class="heder" >Test: <span id="temat">temat</span>&nbsp;</span>
                 <span class="heder" >Data utworzenia: <span id="dataU"></span>&nbsp;&nbsp;</span>
                 <span class="heder" >Klasa: <span id="klasU"></span></span>
                 <hr>
-                <button class="button_to_do" id="back">Cofnij</button>
+                
                 <form action="/testy/tworzenie/pytanie" method="GET" style="display:inline;">
                 <button class="button_to_do">Dodaj pytanie</button>
                 <input type="text" value="" class="idinput" name="id">
@@ -26,11 +70,11 @@
                 <button class="button_to_do">Znajdz pytanie</button>
                 <button class="button_to_do">Rozpocznij test</button>
                 <button class="button_to_do">Wyniki testu</button>
-                <button class="button_to_do"  id="addnewT">Dodaj nowy test</button>
+                
                 <div style="clear:both"></div>
                 <hr>
             </div>
-            <div id="contener">
+            <div id="contener" style="z-index:0;">
                     
             
         </div>
@@ -50,4 +94,27 @@
     
     
     </body>
+    <script>
+
+            $(document).ready(function() {
+            var NavY = $('.nav').offset().top;
+             
+            var stickyNav = function(){
+            var ScrollY = $(window).scrollTop();
+                  
+            if (ScrollY > NavY) { 
+                $('.nav').addClass('sticky');
+            } else {
+                $('.nav').removeClass('sticky'); 
+            }
+            };
+             
+            stickyNav();
+             
+            $(window).scroll(function() {
+                stickyNav();
+            });
+            });
+            
+        </script>
 </html>
