--- a/views/editPytanie.html
+++ b/views/editPytanie.html
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Type", content="text/html; charset=utf-8">
         <script src="/js/pytanieClass.js"></script>
         <script type='text/javascript' src="/js/jquery-2.0.3.min.js"></script>
-        <script type="text/javascript" src="/js/editpytanie.js"></script>
+        <script type="text/javascript" src="/js/pytania/editpytanie.js"></script>
         
     </head>
     <body>
@@ -35,7 +35,7 @@
                             <li><a href="#">Klasy</a>
                                 <ul>
                                     <li><a href="#">Wszystkie klasy</a></li>
-                                    <li><a href="#">Dodaj klase</a></li>
+                                    <li><a href="/klasa/dodaj/klasa">Dodaj klase</a></li>
                                     <li><a href="#">Archiwizuj klase</a></li>
                                     <li><a href="#">Wyniki Klas</a></li>
                                 </ul>
