--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,10 +253,10 @@ body{
 }
 .titleC
 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
     color: #555555;
-   
+   margin-left: 10px;
 }
 .content>input{
     width: 100%;
