--- a/views/addPytanie.html
+++ b/views/addPytanie.html
@@ -8,7 +8,7 @@
         <meta http-equiv="Content-Type", content="text/html; charset=utf-8">
         <script type='text/javascript' src="/js/pytanieClass.js"></script>
         <script type='text/javascript' src="/js/jquery-2.0.3.min.js"></script>
-        <script type="text/javascript" src="/js/cpytanie.js"></script>
+        <script type="text/javascript" src="/js/pytania/cpytanie.js"></script>
     </head>
     <body>
         
@@ -23,18 +23,18 @@
                                     <li><a href="#">Zmiana hasła</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Testy</a>
+                            <li><a href="/testy">Testy</a>
                                 <ul>
-                                    <li><a href="/testy">Wszystkie testy</a></li>
+                                    
                                     <li><a href="/testy/tworzenie/test">Dodaj test</a></li>
                                     <li><a href="#">Rozpocznij test</a></li>
                                     <li><a href="#">Aktualne testy</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Klasy</a>
+                            <li><a href="/klasa">Klasy</a>
                                 <ul>
-                                    <li><a href="#">Wszystkie klasy</a></li>
-                                    <li><a href="#">Dodaj klase</a></li>
+                                    
+                                    <li><a href="/klasa/dodaj/klasa">Dodaj klase</a></li>
                                     <li><a href="#">Archiwizuj klase</a></li>
                                     <li><a href="#">Wyniki Klas</a></li>
                                 </ul>
