--- a/views/admin.html
+++ b/views/admin.html
@@ -20,18 +20,18 @@
                             <li><a href="#">Zmiana hasła</a></li>
                         </ul>
                     </li>
-                    <li><a>Testy</a>
+                    <li><a href="/testy">Testy</a>
                         <ul>
-                            <li><a href="/testy">Wszystkie testy</a></li>
+                            
                             <li><a href="/testy/tworzenie/test">Dodaj test</a></li>
                             <li><a href="#">Rozpocznij test</a></li>
                             <li><a href="#">Aktualne testy</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Klasy</a>
+                    <li><a href="/klasa">Klasy</a>
                         <ul>
-                            <li><a href="#">Wszystkie klasy</a></li>
-                            <li><a href="#">Dodaj klase</a></li>
+                            
+                            <li><a href="/klasa/dodaj/klasa">Dodaj klase</a></li>
                             <li><a href="#">Archiwizuj klase</a></li>
                             <li><a href="#">Wyniki Klas</a></li>
                         </ul>
