--- a/views/socketio.html
+++ b/views/socketio.html
@@ -1,8 +1,34 @@
 <!--@Copyright 2018 BŚ-->
 <html lang="pl">
     <head>
-        <script src="/socket.io/socket.io.js"></script>
+        <title>Egzaminy</title>
+        <link rel="Shortcut icon" href="/img/ico/testy-logiczne.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Content-Type", content="text/html; charset=utf-8">
+        <style>
+         a{
+             display: block;
+             margin-top: 50px;
+             text-align: center;
+    font-size: 4.1vw !important; 
+    border: 0.01vw solid #DADADA ;
+    background: whiteSmoke ;
+    color: #303030 ;
+    border-radius: 0.2vw ;
+    padding: 3px 5px ;
+    box-shadow: 0px 0px 1vw #A7A7A7 ;
+    cursor: pointer;
+    text-decoration: none;
+   
+    }
+    a:hover{
+        background-color: rgb(158, 198, 224) ;
+    border-color: #78c4d1 ;
+    }
+        </style>
     </head>
     <body>
+        <a href="/logowanie/uczen">Uczeń</a>
+        <a href="/logowanie/admin">Administrator</a>
     </body>
 </html>
