--- a/views/tworzenieT.html
+++ b/views/tworzenieT.html
@@ -25,8 +25,8 @@
                                 <ul>
                                     
                                     <li><a href="/testy/tworzenie/test">Dodaj test</a></li>
-                                    <li><a href="#">Rozpocznij test</a></li>
-                                    <li><a href="#">Aktualne testy</a></li>
+                                    <li><a href="/egzamin">Rozpocznij test</a></li>
+                                    <li><a href="/egzamin/widok/wszystkie">Aktualne testy</a></li>
                                 </ul>
                             </li>
                             <li><a href="/klasa">Klasy</a>
