--- a/views/user/index.html
+++ b/views/user/index.html
@@ -27,7 +27,7 @@
                     </li>
                     <li><a href="#">Wyniki</a>
                         <ul>
-                            <li><a href="#">Testy</a></li>
+                            <li><a href="/profil/testy/wyniki">Testy</a></li>
                             <li><a href="#">Nauka</a></li>
                             <li><a href="#">Kalas</a></li>
                         </ul>
